--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
